--- a/src/components/00-settings/_fonts.scss
+++ b/src/components/00-settings/_fonts.scss
@@ -1,17 +1,84 @@
-$font-family-latin-regular: 'LatoRegular';
-$font-family-latin-bold: 'LatoBold';
-$font-family-arabic-regular: 'TajawalRegular';
-$font-family-arabic-bold: 'TajawalBold';
-$font-family-icons: 'Sapphire-Icon-Font';
+// $font-family-latin-regular: 'LatoRegular';
+// $font-family-latin-bold: 'LatoBold';
+// $font-family-arabic-regular: 'TajawalRegular';
+// $font-family-arabic-bold: 'TajawalBold';
+// $font-family-icons: 'Sapphire-Icon-Font';
 
-/* Font base: 14px */
-$font-size-huge: 2.249em; // 34px
-$font-size-big: 2.143em; // 30px
-$font-size-heading1: 1.714em; // 24px
-$font-size-heading2: 1.429em; // 20px
-$font-size-heading3: 1.143em; // 16px
-$font-size-heading4: 1.071em; // 15px
-$font-size-normal: 1em; // 14px
-$font-size-regular: 1em; // 14px
-$font-size-small: 0.857em; // 12px
-$font-size-tiny: 0.786em; // 11px
+// /* Font base: 14px */
+// $font-size-huge: 2.249em; // 34px
+// $font-size-big: 2.143em; // 30px
+// $font-size-heading1: 1.714em; // 24px
+// $font-size-heading2: 1.429em; // 20px
+// $font-size-heading3: 1.143em; // 16px
+// $font-size-heading4: 1.071em; // 15px
+// $font-size-normal: 1em; // 14px
+// $font-size-regular: 1em; // 14px
+// $font-size-small: 0.857em; // 12px
+// $font-size-tiny: 0.786em; // 11px
+
+
+@import url(/SapphireCare_Theme/css/SapphireCare_Resources.SapphireCareFontIcon.css?t=876554329);
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: url('/SapphireCare_Theme/lato-light-webfont.woff2') format('woff2'),
+    url('/SapphireCare_Theme/lato-light-webfont.woff') format('woff'),
+    url('/SapphireCare_Theme/lato-light-webfont.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/SapphireCare_Theme/lato-regular-webfont.woff2') format('woff2'),
+    url('/SapphireCare_Theme/lato-regular-webfont.woff') format('woff'),
+    url('/SapphireCare_Theme/lato-regular-webfont.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 600;
+  src: url('/SapphireCare_Theme/lato-semibold-webfont.woff2') format('woff2'),
+    url('/SapphireCare_Theme/lato-semibold-webfont.woff') format('woff'),
+    url('/SapphireCare_Theme/lato-semibold-webfont.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 700;
+  src: url('/SapphireCare_Theme/lato-bold-webfont.woff2') format('woff2'),
+    url('/SapphireCare_Theme/lato-bold-webfont.woff') format('woff'),
+    url('/SapphireCare_Theme/lato-bold-webfont.ttf') format('truetype');
+}
+
+
+
+
+/* Font classes */
+.lato-light {
+  font-family: Lato, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 300;
+}
+
+.lato-regular {
+  font-family: Lato, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.lato-semibold {
+  font-family: Lato, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+}
+
+.lato-bold {
+  font-family: Lato, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+}
