--- a/src/components/03-elements/_input.scss
+++ b/src/components/03-elements/_input.scss
@@ -26,58 +26,13 @@ input.checkbox[disabled]:before {
   border: 1px solid #eceff1;
 }
 
-/* Input Radio */
-input[type="radio"] {
+/* Input invalid red color */
 
-  -webkit-appearance: none;
-  background-color: transparent;
-  border: 0;
-  cursor: pointer;
-  display: inline-block;
-  height: 20px;
-  margin: 0;
-  position: relative;
-  width: 20px;
+.animated-label-input input[data-input].not-valid {
+  border-bottom: 1px solid #cc3524;
 }
 
-input[type="radio"]:before {
-  border: 2px solid rgba(1, 1, 1, .54);
-  border-radius: 100%;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  content: "";
-  display: block;
-  height: 20px;
-  -webkit-transition: all 200ms ease-in;
-  -o-transition: all 200ms ease-in;
-  transition: all 200ms ease-in;
-  width: 20px;
-}
 
-input[type="radio"]:checked:before {
-  background: #fff;
-  border: 2px solid #00BFA5;
-  /*primary-color*/
-}
-
-input[type="radio"]:checked:after {
-  background: #00BFA5;
-  /*primary-color*/
-  border: 0;
-  border-radius: 100%;
-  content: "";
-  display: block;
-  height: 10px;
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  -ms-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-  width: 10px;
-}
-
-/* End Input Radio */
 
 input[data-input]:focus,
 textarea[data-textarea]:focus {
