--- a/src/components/04-base/_buttons.scss
+++ b/src/components/04-base/_buttons.scss
@@ -189,3 +189,79 @@
   min-height: 20px;
   padding: 3px 10px;
 }
+
+[class^="btn background-"],
+[class^="btn background-"]:hover,
+[class^="btn background-"]:focus {
+  border: none;
+}
+
+[class^="btn background-"][disabled],
+[class^="btn background-"][disabled]:hover,
+[class^="btn background-"][disabled]:focus {
+  background-color: #eceff1;
+  border: none;
+  color: #fff;
+}
+
+/* Button to Select Date */
+a.btn.select-date,
+a.btn.select-date:hover {
+  -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .11);
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .11);
+  color: #333 !important;
+  font-size: 16px !important;
+  font-weight: bold;
+  line-height: 35px;
+  margin: 5px 0 10px;
+  min-width: 200px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+a.btn.select-date .sc {
+  color: #00BFA5;
+  font-size: 20px;
+  margin-right: 10px;
+  /*primary-color*/
+}
+
+/* default button on the colored background*/
+.layout.blank.bg-colored .btn {
+  border-color: #fff;
+  color: #fff;
+}
+
+.layout.blank.bg-colored .btn:active {
+  border-color: #007E85;
+}
+
+/* Button Group */
+.button-group {
+  background: #EAEAEA;
+  border-radius: 4px;
+  overflow: hidden;
+  padding: 4px;
+}
+
+button.button-group-item {
+  border-radius: 4px;
+  color: #455a64;
+  line-height: 12px;
+  min-height: 36px;
+  padding: 5px 10px;
+}
+
+button.button-group-item.button-group-selected-item {
+  background-color: #00BFA5;
+  /*primary-color*/
+  border-color: #00BFA5;
+  /*primary-color*/
+  color: #fff;
+}
+
+button.button-group-item.button-group-selected-item[disabled] {
+  background-color: #eee;
+  border-color: #eee;
+  color: #b0bec5;
+}
