--- a/src/components/00-settings/_import.scss
+++ b/src/components/00-settings/_import.scss
@@ -1,4 +1,4 @@
-@import 'colors';
-@import 'fonts';
-@import 'sizes';
-@import 'url';
+@forward 'colors';
+@forward 'fonts';
+@forward 'sizes';
+@forward 'url';
