--- a/src/components/00-settings/_fonts.scss
+++ b/src/components/00-settings/_fonts.scss
@@ -17,43 +17,43 @@
 // $font-size-tiny: 0.786em; // 11px
 
 
-@import url(/SapphireCare_Theme/css/SapphireCare_Resources.SapphireCareFontIcon.css?t=876554329);
+// @import url(/SapphireCare_Theme/css/SapphireCare_Resources.SapphireCareFontIcon.css?t=876554329);
 
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 300;
-  src: url('/SapphireCare_Theme/lato-light-webfont.woff2') format('woff2'),
-    url('/SapphireCare_Theme/lato-light-webfont.woff') format('woff'),
-    url('/SapphireCare_Theme/lato-light-webfont.ttf') format('truetype');
-}
+// @font-face {
+//   font-family: 'Lato';
+//   font-style: normal;
+//   font-weight: 300;
+//   src: url('/SapphireCare_Theme/lato-light-webfont.woff2') format('woff2'),
+//     url('/SapphireCare_Theme/lato-light-webfont.woff') format('woff'),
+//     url('/SapphireCare_Theme/lato-light-webfont.ttf') format('truetype');
+// }
 
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 400;
-  src: url('/SapphireCare_Theme/lato-regular-webfont.woff2') format('woff2'),
-    url('/SapphireCare_Theme/lato-regular-webfont.woff') format('woff'),
-    url('/SapphireCare_Theme/lato-regular-webfont.ttf') format('truetype');
-}
+// @font-face {
+//   font-family: 'Lato';
+//   font-style: normal;
+//   font-weight: 400;
+//   src: url('/SapphireCare_Theme/lato-regular-webfont.woff2') format('woff2'),
+//     url('/SapphireCare_Theme/lato-regular-webfont.woff') format('woff'),
+//     url('/SapphireCare_Theme/lato-regular-webfont.ttf') format('truetype');
+// }
 
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 600;
-  src: url('/SapphireCare_Theme/lato-semibold-webfont.woff2') format('woff2'),
-    url('/SapphireCare_Theme/lato-semibold-webfont.woff') format('woff'),
-    url('/SapphireCare_Theme/lato-semibold-webfont.ttf') format('truetype');
-}
+// @font-face {
+//   font-family: 'Lato';
+//   font-style: normal;
+//   font-weight: 600;
+//   src: url('/SapphireCare_Theme/lato-semibold-webfont.woff2') format('woff2'),
+//     url('/SapphireCare_Theme/lato-semibold-webfont.woff') format('woff'),
+//     url('/SapphireCare_Theme/lato-semibold-webfont.ttf') format('truetype');
+// }
 
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 700;
-  src: url('/SapphireCare_Theme/lato-bold-webfont.woff2') format('woff2'),
-    url('/SapphireCare_Theme/lato-bold-webfont.woff') format('woff'),
-    url('/SapphireCare_Theme/lato-bold-webfont.ttf') format('truetype');
-}
+// @font-face {
+//   font-family: 'Lato';
+//   font-style: normal;
+//   font-weight: 700;
+//   src: url('/SapphireCare_Theme/lato-bold-webfont.woff2') format('woff2'),
+//     url('/SapphireCare_Theme/lato-bold-webfont.woff') format('woff'),
+//     url('/SapphireCare_Theme/lato-bold-webfont.ttf') format('truetype');
+// }
 
 
 
