changing for import

--- a/src/components/00-settings/_index.scss
+++ b/src/components/00-settings/_index.scss
@@ -1,4 +1,4 @@
-@forward 'colors';
-@forward 'fonts';
-@forward 'sizes';
-@forward 'url';
+@import 'colors';
+@import 'fonts';
+@import 'sizes';
+@import 'url';
