--- a/src/components/04-base/_index.scss
+++ b/src/components/04-base/_index.scss
@@ -1,5 +1,5 @@
-@forward 'buttons';
-@forward 'images';
-@forward 'radio-button';
-@forward 'select';
-@forward 'switch-button';
+@import 'buttons';
+@import 'images';
+@import 'radio-button';
+@import 'select';
+@import 'switch-button';
