--- a/src/components/05-components/SapphireCare_Patterns/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/_index.scss
@@ -1,15 +1,15 @@
-@forward 'bottom-bar-item';
-@forward 'calendar';
-@forward 'card-icon-top-text-bottom';
-@forward 'card-image-top-actions-bottom';
-@forward 'card-top-title-with-background';
-@forward 'card-two-cols';
-@forward 'card-two-cols-big';
-@forward 'card-with-icon-on-top';
-@forward 'custom-tabs';
-@forward 'filter';
-@forward 'full-page-feedback';
-@forward 'image-background';
-@forward 'margin-container-roundBg';
-@forward 'small-card';
-@forward 'user-card-with-bottom-actions';
+@import 'bottom-bar-item';
+@import 'calendar';
+@import 'card-icon-top-text-bottom';
+@import 'card-image-top-actions-bottom';
+@import 'card-top-title-with-background';
+@import 'card-two-cols';
+@import 'card-two-cols-big';
+@import 'card-with-icon-on-top';
+@import 'custom-tabs';
+@import 'filter';
+@import 'full-page-feedback';
+@import 'image-background';
+@import 'margin-container-roundBg';
+@import 'small-card';
+@import 'user-card-with-bottom-actions';
