--- a/src/components/05-components/Silk_Blocks/_index.scss
+++ b/src/components/05-components/Silk_Blocks/_index.scss
@@ -1,25 +1,25 @@
-@forward 'badge';
-@forward 'bottom-bar';
-@forward 'card';
-@forward 'card-advanced';
-@forward 'carousel';
-@forward 'chat-message';
-@forward 'counter';
-@forward 'gallery';
-@forward 'icon-badge';
-@forward 'list-item';
-@forward 'margin-container';
-@forward 'master-detail';
-@forward 'notification';
-@forward 'progress-bar';
-@forward 'range-slider';
-@forward 'search';
-@forward 'section';
-@forward 'section-expandable';
-@forward 'separator';
-@forward 'sidebar';
-@forward 'tabs';
-@forward 'tag';
-@forward 'timeline';
-@forward 'tooltip';
-@forward 'wizard';
+@import 'badge';
+@import 'bottom-bar';
+@import 'card';
+@import 'card-advanced';
+@import 'carousel';
+@import 'chat-message';
+@import 'counter';
+@import 'gallery';
+@import 'icon-badge';
+@import 'list-item';
+@import 'margin-container';
+@import 'master-detail';
+@import 'notification';
+@import 'progress-bar';
+@import 'range-slider';
+@import 'search';
+@import 'section';
+@import 'section-expandable';
+@import 'separator';
+@import 'sidebar';
+@import 'tabs';
+@import 'tag';
+@import 'timeline';
+@import 'tooltip';
+@import 'wizard';
