--- a/src/components/06-helpers/_index.scss
+++ b/src/components/06-helpers/_index.scss
@@ -1,10 +1,10 @@
-@import 'avatar';
-@import 'background';
-@import 'border';
-@import 'break-words';
-@import 'height';
-@import 'rotate';
-@import 'rotate';
-@import 'tag';
-@import 'text';
-@import 'validation-colors';
+@forward 'avatar';
+@forward 'background';
+@forward 'border';
+@forward 'break-words';
+@forward 'height';
+@forward 'rotate';
+@forward 'rotate';
+@forward 'tag';
+@forward 'text';
+@forward 'validation-colors';
