--- a/src/components/07-trumps/_index.scss
+++ b/src/components/07-trumps/_index.scss
@@ -1,10 +1,10 @@
-@import 'animated-label-input';
-@import 'arrows-rtl';
-@import 'dropdown';
-@import 'email-input-rtl';
-@import 'feedback';
-@import 'google-maps';
-@import 'margins-rtl';
-@import 'margins';
-@import 'rounded-number';
-@import 'scroll';
+@forward 'animated-label-input';
+@forward 'arrows-rtl';
+@forward 'dropdown';
+@forward 'email-input-rtl';
+@forward 'feedback';
+@forward 'google-maps';
+@forward 'margins-rtl';
+@forward 'margins';
+@forward 'rounded-number';
+@forward 'scroll';
