--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,8 +1,8 @@
-@import '00-settings';
-//@import '01-tools/import';
-@import '02-generic';
-@import '03-elements';
-@import '04-base';
-@import '05-components';
-@import '06-helpers';
-@import '07-trumps';
+@use '00-settings';
+//@use '01-tools/import';
+@use '02-generic';
+@use '03-elements';
+@use '04-base';
+@use '05-components';
+@use '06-helpers';
+@use '07-trumps';
