--- a/src/components/05-components/_index.scss
+++ b/src/components/05-components/_index.scss
@@ -1,4 +1,4 @@
-@import 'Common';
-@import 'SapphireCare_Patterns';
-@import 'screens';
-@import 'Silk_Blocks';
+@forward 'Common';
+@forward 'SapphireCare_Patterns';
+@forward 'screens';
+@forward 'Silk_Blocks';
