some configs and medical card

--- a/src/components/00-settings/_colors.scss
+++ b/src/components/00-settings/_colors.scss
@@ -150,6 +150,10 @@ $regular-red: #ff3e2d;
 $sapphire-background: #f3f3f3;
 $sapphire-blue: #2a5a6e;
 $sapphire-blue2: #00bfa5;
+$sapphire-care-blue1:#0D456D;
+$sapphire-care-blue2:#105C90;
+$sapphire-care-blue3:#002B49;
+$sapphire-care-red:#FA5252;
 $sapphire-clinician: #d6d6d6;
 $sapphire-dark-blue: #30384a;
 $sapphire-dark-blue1: #333333;
