--- a/src/components/05-components/Common/layout/_menu.scss
+++ b/src/components/05-components/Common/layout/_menu.scss
@@ -1,58 +1,68 @@
 /* Menu */
+
+@use '~Settings/colors';
+
 .app-menu {
-  -webkit-box-shadow: -15px 2px 40px 0 rgba(97, 97, 97, 0.41);
-  box-shadow: -15px 2px 40px 0 rgba(97, 97, 97, 0.41);
+	-webkit-box-shadow: -15px 2px 40px 0 rgba(97, 97, 97, 0.41);
+	box-shadow: -15px 2px 40px 0 rgba(97, 97, 97, 0.41);
 }
 
 .app-menu a .icon,
 .submenu .icon {
-  color: #00bfa5;
-  /*primary-color*/
-  font-size: 26px;
-  margin: 0;
-  padding-right: 20px;
-  width: 45px;
+	color: colors.$regular-alpha;
+	/*primary-color*/
+	font-size: 26px;
+	margin: 0;
+	padding-right: 20px;
+	width: 45px;
 }
 
 .menu--visible .menu-background {
-  opacity: 0.25;
+	opacity: 0.25;
 }
 
-.app-menu-links>a {
-  background-color: $regular-alpha;
+.app-menu-links > a {
+	background-color: colors.$regular-eta;
+	padding-left: 40px !important;
 }
 
-.app-menu-links>a,
 .submenu-item {
-  padding-left: 20px !important;
+	padding-left: 20px !important;
 }
 
-.is-rtl .submenu-item:before {
-  left: 15px;
-}
+.is-rtl {
+	.submenu-item {
+		&:before {
+			left: 15px;
+		}
+		&:after {
+			left: 20px;
+		}
+	}
 
-.is-rtl .submenu.open .submenu-item:before {
-  left: 20px;
-}
+	.submenu.open {
+		.submenu-item {
+			&:before {
+				left: 20px;
+			}
 
-.is-rtl .submenu-item:after {
-  left: 20px;
+			&:after {
+				left: 15px;
+			}
+		}
+	}
 }
-
-.is-rtl .submenu.open .submenu-item:after {
-  left: 15px;
-}
-
-.submenu-items a,
-.submenu-items a:link,
-.submenu-items a:visited {
-  background-color: #f7f7f7;
-  border: 0;
-  border-bottom: 1px solid #efefef;
-}
-
-.submenu-items a:first-child,
-.submenu-items a:link:first-child,
-.submenu-items a:visited:first-child {
-  border-top: 1px solid #efefef;
+.submenu-items {
+	a,
+	a:link,
+	a:visited {
+		background-color: #f7f7f7;
+		border: 0;
+		border-bottom: 1px solid #efefef;
+	}
+	a:first-child,
+	a:link:first-child,
+	a:visited:first-child {
+		border-top: 1px solid #efefef;
+	}
 }
