--- a/src/components/05-components/SapphireCare_Patterns/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/_index.scss
@@ -11,5 +11,6 @@
 @forward 'full-page-feedback';
 @forward 'image-background';
 @forward 'margin-container-roundBg';
+@forward 'medical-card';
 @forward 'small-card';
 @forward 'user-card-with-bottom-actions';
