--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,8 +1,18 @@
-@use '00-settings';
-//@use '01-tools/import';
-@use '02-generic';
-@use '03-elements';
-@use '04-base';
-@use '05-components';
-@use '06-helpers';
-@use '07-trumps';
+// @forward '00-settings';
+// @forward '01-tools';
+// @forward '02-generic';
+// @forward '03-elements';
+// @forward '04-base';
+// @forward '05-components';
+// @forward '06-helpers';
+// @forward '07-trumps';
+
+@use '~Settings'as settings;
+@use '~Tools'as tools;
+@use '~Generic'as generic;
+@use '~Elements'as elements;
+@use '~Base'as base;
+@use '~Components'as components;
+@use '~Helpers'as helpers;
+@use '~Trumps'as trumps;
+@use '~Adjusts'as adjusts;
