--- a/src/components/05-components/SapphireCare_Patterns/card-image-top-actions-bottom/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-image-top-actions-bottom/_index.scss
@@ -1,60 +1,60 @@
 /* CardImageTopActionsBottom*/
 .card-image-top {
-  background: #fff;
-  border-radius: 4px;
-  box-shadow: 0 2px 14px 0 rgba(0, 0, 0, .14);
-  overflow: hidden;
+	background: #fff;
+	border-radius: 10px;
+	box-shadow: 0 2px 14px 0 rgba(0, 0, 0, 0.14);
+	overflow: hidden;
 }
 
 .card-image-top-img-wrapper,
 .card-image-top-background-image {
-  position: relative;
+	position: relative;
 }
 
 .card-image-top-background-image:before {
-  background: #002b49;
-  /*secondary-color*/
-  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, #002b49 100%);
-  /*secondary-color*/
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #002b49 100%);
-  /*secondary-color*/
-  bottom: 0;
-  content: "";
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 30%;
+	background: #002b49;
+	/*secondary-color*/
+	background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, #002b49 100%);
+	/*secondary-color*/
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #002b49 100%);
+	/*secondary-color*/
+	bottom: 0;
+	content: '';
+	left: 0;
+	position: absolute;
+	right: 0;
+	top: 30%;
 }
 
 .card-image-top-background-image img {
-  height: 120px;
+	height: 120px;
 
-  object-fit: cover;
-  object-position: center;
-  width: 100%;
+	object-fit: cover;
+	object-position: center;
+	width: 100%;
 }
 
 .card-image-top-text-wrapper {
-  bottom: 10px;
-  left: 15px;
-  position: absolute;
+	bottom: 10px;
+	left: 15px;
+	position: absolute;
 }
 
 .is-rtl .card-image-top-text-wrapper {
-  left: 0px;
-  right: 15px;
+	left: 0px;
+	right: 15px;
 }
 
 .card-image-top-actions-wrapper {
-  display: table;
-  text-align: center;
-  width: 100%;
+	display: table;
+	text-align: center;
+	width: 100%;
 }
 
 .card-image-top-actions-wrapper-act {
-  display: table-cell;
-  font-size: 24px;
-  padding: 10px 10px;
-  vertical-align: middle;
-  /*width: 33.33%;*/
+	display: table-cell;
+	font-size: 24px;
+	padding: 10px 10px;
+	vertical-align: middle;
+	/*width: 33.33%;*/
 }
